force-app/main/default/objects/Board_Membership_Year__c/Board_Membership_Year__c.object-meta.xml
<CustomObject>
    <description>One record per member per board per fiscal year within a Board Term — captures what the member did that specific year (role, whether it counts toward the 6-year limit, board-meeting attendance, and the year's giving summary). Enables point-in-time rosters and the by-fiscal-year history the client keeps (importable from eTapestry). Master-detail child of Board Term. JSI-123 Board Tracking. Author: Jason Ott.</description>
    <label>Board Membership Year</label>
    <nameField>
        <displayFormat>BMY-{00000}</displayFormat>
        <label>Board Membership Year Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Board Membership Years</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>