force-app/main/default/objects/Board_Membership_Year__c/fields/Annual_Giving_Summary__c.field-meta.xml
<CustomField>
    <fullName>Annual_Giving_Summary__c</fullName>
    <description>The member's Annual Giving Summary for this fiscal year — where the board commitment + fulfillment live. Linked by the commitment automation. JSI-123 / Jason Ott.</description>
    <label>Annual Giving Summary</label>
    <referenceTo>Annual_Giving_Summary__c</referenceTo>
    <relationshipLabel>Board Membership Years</relationshipLabel>
    <relationshipName>Board_Membership_Years</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>