force-app/main/default/objects/Board_Membership_Year__c/fields/Board_Term__c.field-meta.xml
<CustomField>
    <fullName>Board_Term__c</fullName>
    <description>The multi-year term this year of service belongs to. JSI-123 / Jason Ott.</description>
    <label>Board Term</label>
    <referenceTo>Board_Term__c</referenceTo>
    <relationshipLabel>Board Membership Years</relationshipLabel>
    <relationshipName>Board_Membership_Years</relationshipName>
    <type>MasterDetail</type>
</CustomField>