force-app/main/default/objects/Board_Membership_Year__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The board member (denormalized from the Board Term for reporting, the Contact-page related list, and eTapestry import). JSI-123 / Jason Ott.</description>
    <label>Board Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Board Membership Years</relationshipLabel>
    <relationshipName>Board_Membership_Years</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>