force-app/main/default/objects/Board_Membership_Year__c/fields/Fiscal_Year_Label__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_Label__c</fullName>
    <description>The board/fiscal year (July 1-June 30) this record covers, matching Annual Giving Summary labels. The by-year key for point-in-time rosters + import. JSI-123 / Jason Ott.</description>
    <label>Fiscal Year</label>
    <length>40</length>
    <type>Text</type>
</CustomField>