force-app/main/default/objects/Board_Membership_Year__c/fields/FY_End__c.field-meta.xml
<CustomField>
    <fullName>FY_End__c</fullName>
    <description>June 30 end of this fiscal year. JSI-123 / Jason Ott.</description>
    <label>Fiscal Year End</label>
    <type>Date</type>
</CustomField>