force-app/main/default/objects/Board_Membership_Year__c/fields/FY_Start__c.field-meta.xml
<CustomField>
    <fullName>FY_Start__c</fullName>
    <description>July 1 anchor of this fiscal year, for date filtering and point-in-time rosters. JSI-123 / Jason Ott.</description>
    <label>Fiscal Year Start</label>
    <type>Date</type>
</CustomField>