force-app/main/default/objects/Board_Membership_Year__c/fields/Meeting_Requirement_Met__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Requirement_Met__c</fullName>
    <description>TRUE when the member attended at least 3 board meetings this year (the "3 of 4" requirement). JSI-123 / Jason Ott.</description>
    <formula>Meetings_Attended__c &gt;= 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Requirement Met</label>
    <type>Checkbox</type>
</CustomField>