force-app/main/default/objects/Board_Membership_Year__c/fields/Meetings_Attended__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Attended__c</fullName>
    <description>Count of board meetings this member actually attended this year (roll-up of Attended Board Meeting Attendance). Used to check the 3-of-4 requirement. JSI-123 / Jason Ott.</description>
    <label>Meetings Attended</label>
    <summaryForeignKey>Board_Meeting_Attendance__c.Board_Membership_Year__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <summaryFilterItems>
        <field>Board_Meeting_Attendance__c.Attended__c</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
    <type>Summary</type>
</CustomField>