force-app/main/default/objects/Board_Membership_Year__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>The member's role during this fiscal year. Officer roles (President/Vice President/Secretary/Treasurer/Chair) mark an officer year, which pauses the 6-year board clock (does not count toward the limit). JSI-123 / Jason Ott.</description>
    <label>Role (This Year)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
                <default>true</default>
                <label>Member</label>
            </value>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Past President</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>