force-app/main/default/objects/Board_Membership_Year__c/fields/Year_Key__c.field-meta.xml
<CustomField>
    <fullName>Year_Key__c</fullName>
    <description>Dedupe backstop = Board Term Id + '|' + Fiscal Year. Unique, case-insensitive. Stamped by the before-save flow. JSI-123 / Jason Ott.</description>
    <externalId>true</externalId>
    <label>Year Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>